# MatrixFilter

./: .gitattributes  .gitmodules  BUGS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  NAMING_CHECKLIST.md  PACKAGE_SUMMARY.md  README.md  RELEASE_NOTES_v1.1.0.md  RUN_THIS.txt  START_HERE.txt  build.yml  fix_all.sh  fix_naming.sh  go.sh  quick-check.yml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
files/: PACKAGE_SUMMARY.md  START_HERE.txt  fix_naming.sh  quick-check.yml
include/: plugin.h
releases/: v1.0.0.md
src/: plugin-extensions.cpp  plugin.cpp  symbols-windows.txt
src/vst3/: MatrixFilterVST_cids.h  MatrixFilterVST_controller.cpp  MatrixFilterVST_controller.h  MatrixFilterVST_entry.cpp  MatrixFilterVST_processor.cpp  MatrixFilterVST_processor.h
vst3/: editcontroller.cpp
